[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "telegram-bypass-bot"
version = "0.1.0"
description = "Telegram bot for bypassing shortened URLs with domain health checking"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=22.0",
    "aiohttp>=3.9",
    "aiofiles>=24.0",
    "curl-cffi>=0.15",
    "bs4>=4.12",
    "lxml>=5.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.50"]
